--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <head>
     <script type="text/javascript">
   		const getProfileUrlFor = async (id) => {
-        const data = await (await fetch("https://api.github.com/user/" + id + "?callback=?")).json();
-        const github_user_url = json["data"]["html_url"];
+        const data = await (await fetch("https://api.github.com/user/" + id)).json();
+        const github_user_url = data["data"]["html_url"];
         window.location.replace(github_user_url);
   		}
       document.addEventListener('DOMContentLoaded', () => {
